Package: R.rsp
==============

Version: 0.9.0 [2013-02-12]
o The internal RSP engine has undergone a major redesign.


Version: 0.8.5 [2013-01-20]
o Now rsp() uses compileRnw() for *.Rnw files.
o Added compileRnw() which compiles Sweave and knitr Rnw files.
o Added typeOfRnw() which tries to infer whether an Rnw file is 
  for Sweave or knitr based on its contents.
o ROBUSTNESS: Added system tests for compileKnitr(), compileRnw()
  and rsp() for handling Sweave and knitr Rnw files.
o Added 'knitr' under suggested packages.


Version: 0.8.4 [2012-12-19]
o Utilizing new startupMessage() of R.oo.


Version: 0.8.3 [2012-12-06]
o ROBUSTNESS: Added system tests for compileLaTeX(), compileSweave()
  and rsp().
o Added argument 'outPath' to compileLaTeX(), compileSweave() and rsp(),
  which is also the working directory.
o BUG FIX: compileLaTeX() and compileSweave() would return an incorrect
  pathname unless the source file was in the working directory.


Version: 0.8.2 [2012-06-22]
o ROBUSTNESS: Now the doc/Makefile no longer assumes 'R' is on 
  the system's search path.  Instead it uses $(R_HOME)/bin/R. 
  Thanks to Kasper Hansen at John Hopkins for the suggestion.


Version: 0.8.1 [2012-06-16]
o Now package only imports R.methodsS3 and R.oo instead of
  "depends" on them.


Version: 0.8.0 [2012-05-02]
o Now the package depends on R.devices, which contains the utility
  functions for graphical devices that originate from R.utils.


Version: 0.7.5 [2012-03-20]
o Now inst/doc/templates/Makefile does a better job cleaning up.


Version: 0.7.4 [2012-03-06]
o CRAN POLICY: Removed all internal copies of 'base' functions
  that contain .Internal().


Version: 0.7.3 [2012-02-28]
o Added toLatex() for LaTeX escaping character strings, cf.
  utils::toLatex() for 'sessionInfo' objects.


Version: 0.7.2 [2012-01-21]
o Placed a copy of inst/doc/Makefile in inst/doc/templates/ and
  updated the 'Include static PDFs and non-Sweave vignettes in 